tests/ui/endpoint/invalid_placeholders_ty.stderr
error[E0277]: the trait bound `FooPlaceholders: OpenapiType` is not satisfied
  --> tests/ui/endpoint/invalid_placeholders_ty.rs:15:16
   |
15 | fn endpoint(_: FooPlaceholders) {
   |                ^^^^^^^^^^^^^^^ the trait `OpenapiType` is not implemented for `FooPlaceholders`
   |
   = help: the following other types implement trait `OpenapiType`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
note: required by a bound in `gotham_restful::EndpointWithSchema::Placeholders`
  --> src/endpoint.rs
   |
   |     #[openapi_bound(Placeholders: OpenapiType)]
   |                                   ^^^^^^^^^^^ required by this bound in `EndpointWithSchema::Placeholders`
   |     type Placeholders: PathExtractor<Body> + Clone + Sync;
   |          ------------ required by a bound in this associated type

error[E0277]: the trait bound `FooPlaceholders: Clone` is not satisfied
  --> tests/ui/endpoint/invalid_placeholders_ty.rs:15:16
   |
15 | fn endpoint(_: FooPlaceholders) {
   |                ^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `FooPlaceholders`
   |
note: required by a bound in `gotham_restful::EndpointWithSchema::Placeholders`
  --> src/endpoint.rs
   |
   |     type Placeholders: PathExtractor<Body> + Clone + Sync;
   |                                              ^^^^^ required by this bound in `EndpointWithSchema::Placeholders`
help: consider annotating `FooPlaceholders` with `#[derive(Clone)]`
   |
10 + #[derive(Clone)]
11 | struct FooPlaceholders {
   |

error[E0277]: the trait bound `FooPlaceholders: StateData` is not satisfied
  --> tests/ui/endpoint/invalid_placeholders_ty.rs:15:16
   |
15 | fn endpoint(_: FooPlaceholders) {
   |                ^^^^^^^^^^^^^^^ the trait `StateData` is not implemented for `FooPlaceholders`
   |
   = help: the following other types implement trait `StateData`:
             Repo<T>
             NoopPathExtractor
             CookieJar
             Body
             OnUpgrade
             AuthStatus<T>
             AuthSource
             CorsConfig
           and $N others
   = note: required for `<endpoint___gotham_restful_endpoint as EndpointWithSchema>::Placeholders` to implement `PathExtractor<Body>`
note: required by a bound in `gotham_restful::EndpointWithSchema::Placeholders`
  --> src/endpoint.rs
   |
   |     type Placeholders: PathExtractor<Body> + Clone + Sync;
   |                        ^^^^^^^^^^^^^^^^^^^ required by this bound in `EndpointWithSchema::Placeholders`

error[E0277]: the trait bound `FooPlaceholders: StaticResponseExtender` is not satisfied
  --> tests/ui/endpoint/invalid_placeholders_ty.rs:15:16
   |
15 | fn endpoint(_: FooPlaceholders) {
   |                ^^^^^^^^^^^^^^^ the trait `StaticResponseExtender` is not implemented for `FooPlaceholders`
   |
   = help: the following other types implement trait `StaticResponseExtender`:
             NoopPathExtractor
             NoopExtractor
             IdPlaceholder<ID>
             NoopResponseExtender
             NoopQueryStringExtractor
             FilePathExtractor
   = note: required for `<endpoint___gotham_restful_endpoint as EndpointWithSchema>::Placeholders` to implement `PathExtractor<Body>`
note: required by a bound in `gotham_restful::EndpointWithSchema::Placeholders`
  --> src/endpoint.rs
   |
   |     type Placeholders: PathExtractor<Body> + Clone + Sync;
   |                        ^^^^^^^^^^^^^^^^^^^ required by this bound in `EndpointWithSchema::Placeholders`

error[E0277]: the trait bound `for<'de> FooPlaceholders: serde::de::Deserialize<'de>` is not satisfied
  --> tests/ui/endpoint/invalid_placeholders_ty.rs:15:16
   |
15 | fn endpoint(_: FooPlaceholders) {
   |                ^^^^^^^^^^^^^^^ the trait `for<'de> serde::de::Deserialize<'de>` is not implemented for `FooPlaceholders`
   |
   = help: the following other types implement trait `serde::de::Deserialize<'de>`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = note: required for `<endpoint___gotham_restful_endpoint as EndpointWithSchema>::Placeholders` to implement `PathExtractor<Body>`
note: required by a bound in `gotham_restful::EndpointWithSchema::Placeholders`
  --> src/endpoint.rs
   |
   |     type Placeholders: PathExtractor<Body> + Clone + Sync;
   |                        ^^^^^^^^^^^^^^^^^^^ required by this bound in `EndpointWithSchema::Placeholders`
